@@ -1,7 +1,7 @@
 /*
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
  *
- * Copyright 1997-2009 Sun Microsystems, Inc. All rights reserved.
+ * Copyright 1997-2010 Sun Microsystems, Inc. All rights reserved.
  *
  * The contents of this file are subject to the terms of either the GNU
  * General Public License Version 2 only ("GPL") or the Common Development
@@ -347,8 +347,6 @@ class Protocol {
      * specified OutputStream.  Return true on success.
      */
     synchronized boolean retr(int msg, OutputStream os) throws IOException {
-	if (debug)
-	    out.println("DEBUG POP3: streaming msg " + msg);
 	Response r = simpleCommand("RETR " + msg);
 	if (!r.ok) {
 	    multilineCommandEnd();
